// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Element snapshots should render Element 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp className Element Element--light"
    data-status="false"
    data-test-element="test-1"
    id="test-1"
    style="left: 0px; top: 0px; transform: rotate(0deg) translate(0, 0); transform-origin: center center; background-color: rgb(255, 255, 255); height: 100px; margin: 0px 0px 0px 0px; padding: 0px 0px 0px 0px; position: absolute; width: 100px;"
  />
</DocumentFragment>
`;

exports[`Element snapshots should render Element when is selected & is multiple moving 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp className Element Element--light Element--moving Element--moving--light"
    data-status="true"
    data-test-element="test-1"
    id="test-1"
    style="left: 0px; top: 0px; transform: rotate(0deg) translate(0, 0); transform-origin: center center; background-color: rgb(255, 255, 255); height: 100px; margin: 0px 0px 0px 0px; padding: 0px 0px 0px 0px; position: absolute; width: 100px;"
  >
    <div
      class="css-1jnxvbp Outline Outline--light"
      data-test-box=""
      style="height: 100px; left: 0px; top: 0px; transform: rotate(0deg); width: 100px;"
    />
    <div
      class="css-1xpffs9"
      data-test-box=""
      style="height: 100px; left: 0px; top: 0px; transform: rotate(0deg); transform-origin: center center; width: 100px;"
    >
      <div
        class="css-1jnxvbp"
        data-test-box=""
        style="height: 100px; width: 100px;"
      />
      <svg
        class="Corners Corners--light"
        style="height: 102px; left: -1px; top: -1px; width: 102px;"
      >
        <rect
          height="6"
          rx="1.5"
          width="6"
          x="-3"
          y="-3"
        />
        <rect
          height="6"
          rx="1.5"
          width="6"
          x="-3"
          y="97.5"
        />
        <rect
          height="6"
          rx="1.5"
          width="6"
          x="97.5"
          y="-3"
        />
        <rect
          height="6"
          rx="1.5"
          width="6"
          x="97.5"
          y="97.5"
        />
      </svg>
      <div
        class="TransformArea TransformArea--light"
        style="height: 100px; width: 100px;"
      >
        <div
          class="TransformArea__anchorResize TransformArea__anchorResize--light TransformArea__anchorResize--east TransformArea__anchorResize--east--light"
          data-test-anchor-resize="east"
        />
        <div
          class="TransformArea__anchorResize TransformArea__anchorResize--light TransformArea__anchorResize--north TransformArea__anchorResize--north--light"
          data-test-anchor-resize="north"
        />
        <div
          class="TransformArea__anchorResize TransformArea__anchorResize--light TransformArea__anchorResize--northEast TransformArea__anchorResize--northEast--light"
          data-test-anchor-resize="north-east"
        />
        <div
          class="TransformArea__anchorResize TransformArea__anchorResize--light TransformArea__anchorResize--northWest TransformArea__anchorResize--northWest--light"
          data-test-anchor-resize="north-west"
        />
        <div
          class="TransformArea__anchorResize TransformArea__anchorResize--light TransformArea__anchorResize--south TransformArea__anchorResize--south--light"
          data-test-anchor-resize="south"
        />
        <div
          class="TransformArea__anchorResize TransformArea__anchorResize--light TransformArea__anchorResize--southEast TransformArea__anchorResize--southEast--light"
          data-test-anchor-resize="south-east"
        />
        <div
          class="TransformArea__anchorResize TransformArea__anchorResize--light TransformArea__anchorResize--southWest TransformArea__anchorResize--southWest--light"
          data-test-anchor-resize="south-west"
        />
        <div
          class="TransformArea__anchorResize TransformArea__anchorResize--light TransformArea__anchorResize--west TransformArea__anchorResize--west--light"
          data-test-anchor-resize="west"
        />
        <div
          class="TransformArea__anchorRotate TransformArea__anchorRotate--light TransformArea__anchorRotate--northEast TransformArea__anchorRotate--northEast--light"
          data-test-anchor-rotate="north-east"
        />
        <div
          class="TransformArea__anchorRotate TransformArea__anchorRotate--light TransformArea__anchorRotate--northWest TransformArea__anchorRotate--northWest--light"
          data-test-anchor-rotate="north-west"
        />
        <div
          class="TransformArea__anchorRotate TransformArea__anchorRotate--light TransformArea__anchorRotate--southEast TransformArea__anchorRotate--southEast--light"
          data-test-anchor-rotate="south-east"
        />
        <div
          class="TransformArea__anchorRotate TransformArea__anchorRotate--light TransformArea__anchorRotate--southWest TransformArea__anchorRotate--southWest--light"
          data-test-anchor-rotate="south-west"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Element snapshots should render Element when is selected 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp className Element Element--light"
    data-status="true"
    data-test-element="test-1"
    id="test-1"
    style="left: 0px; top: 0px; transform: rotate(0deg) translate(0, 0); transform-origin: center center; background-color: rgb(255, 255, 255); height: 100px; margin: 0px 0px 0px 0px; padding: 0px 0px 0px 0px; position: absolute; width: 100px;"
  >
    <div
      class="css-1jnxvbp Outline Outline--light"
      data-test-box=""
      style="height: 100px; left: 0px; top: 0px; transform: rotate(0deg); width: 100px;"
    />
    <div
      class="css-1xpffs9"
      data-test-box=""
      style="height: 100px; left: 0px; top: 0px; transform: rotate(0deg); transform-origin: center center; width: 100px;"
    >
      <div
        class="css-1jnxvbp"
        data-test-box=""
        style="height: 100px; width: 100px;"
      />
      <svg
        class="Corners Corners--light"
        style="height: 102px; left: -1px; top: -1px; width: 102px;"
      >
        <rect
          height="6"
          rx="1.5"
          width="6"
          x="-3"
          y="-3"
        />
        <rect
          height="6"
          rx="1.5"
          width="6"
          x="-3"
          y="97.5"
        />
        <rect
          height="6"
          rx="1.5"
          width="6"
          x="97.5"
          y="-3"
        />
        <rect
          height="6"
          rx="1.5"
          width="6"
          x="97.5"
          y="97.5"
        />
      </svg>
      <div
        class="TransformArea TransformArea--light"
        style="height: 100px; width: 100px;"
      >
        <div
          class="TransformArea__anchorResize TransformArea__anchorResize--light TransformArea__anchorResize--east TransformArea__anchorResize--east--light"
          data-test-anchor-resize="east"
        />
        <div
          class="TransformArea__anchorResize TransformArea__anchorResize--light TransformArea__anchorResize--north TransformArea__anchorResize--north--light"
          data-test-anchor-resize="north"
        />
        <div
          class="TransformArea__anchorResize TransformArea__anchorResize--light TransformArea__anchorResize--northEast TransformArea__anchorResize--northEast--light"
          data-test-anchor-resize="north-east"
        />
        <div
          class="TransformArea__anchorResize TransformArea__anchorResize--light TransformArea__anchorResize--northWest TransformArea__anchorResize--northWest--light"
          data-test-anchor-resize="north-west"
        />
        <div
          class="TransformArea__anchorResize TransformArea__anchorResize--light TransformArea__anchorResize--south TransformArea__anchorResize--south--light"
          data-test-anchor-resize="south"
        />
        <div
          class="TransformArea__anchorResize TransformArea__anchorResize--light TransformArea__anchorResize--southEast TransformArea__anchorResize--southEast--light"
          data-test-anchor-resize="south-east"
        />
        <div
          class="TransformArea__anchorResize TransformArea__anchorResize--light TransformArea__anchorResize--southWest TransformArea__anchorResize--southWest--light"
          data-test-anchor-resize="south-west"
        />
        <div
          class="TransformArea__anchorResize TransformArea__anchorResize--light TransformArea__anchorResize--west TransformArea__anchorResize--west--light"
          data-test-anchor-resize="west"
        />
        <div
          class="TransformArea__anchorRotate TransformArea__anchorRotate--light TransformArea__anchorRotate--northEast TransformArea__anchorRotate--northEast--light"
          data-test-anchor-rotate="north-east"
        />
        <div
          class="TransformArea__anchorRotate TransformArea__anchorRotate--light TransformArea__anchorRotate--northWest TransformArea__anchorRotate--northWest--light"
          data-test-anchor-rotate="north-west"
        />
        <div
          class="TransformArea__anchorRotate TransformArea__anchorRotate--light TransformArea__anchorRotate--southEast TransformArea__anchorRotate--southEast--light"
          data-test-anchor-rotate="south-east"
        />
        <div
          class="TransformArea__anchorRotate TransformArea__anchorRotate--light TransformArea__anchorRotate--southWest TransformArea__anchorRotate--southWest--light"
          data-test-anchor-rotate="south-west"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Element snapshots should render Element when width & height is auto 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp className Element Element--light"
    data-status="false"
    data-test-element="test-1"
    id="test-1"
    style="left: 0px; top: 0px; transform: rotate(0deg) translate(0, 0); transform-origin: center center; background-color: rgb(255, 255, 255); height: auto; margin: 0px 0px 0px 0px; padding: 0px 0px 0px 0px; position: absolute; width: auto;"
  />
</DocumentFragment>
`;
